# scanahedron

./: .gitignore  CHANGELOG.md  CMakeLists.txt  LICENSE.md  README.md  build.sh  package-lock.json  package.json  test.sh
src/: main.cpp
src/scanner/: iscannerinterface.h  iscannertypes.h  sanescannerinterface.cpp  sanescannerinterface.h  scanservice.cpp  scanservice.h
src/utils/: defines.h  types.h
tests/e2e/: sanescanner.cpp  test_node.js
tests/unit/: test.cpp
tests/unit/scanner/: scanservice.cpp
tests/unit/utils/: types.cpp
